# snapfzz-seal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: llvm-cov.toml
.github/workflows/: ci.yml  docs.yml  e2e-test.yml
.sisyphus/plans/: 2026-04-08-002-v02-agent-seal-implementation-plan.md  2026-04-08-003-multi-platform-multi-sandbox-architecture.md
crates/agent-seal/: Cargo.toml
crates/agent-seal-compiler/src/: assemble.rs  compile.rs  embed.rs  lib.rs  nuitka.rs  pyinstaller.rs
crates/agent-seal-core/: Cargo.toml
crates/agent-seal-core/src/: crypto.rs  derive.rs  error.rs  payload.rs  tamper.rs  types.rs
crates/agent-seal-fingerprint/: Cargo.toml
crates/agent-seal-fingerprint/src/: canonical.rs  collect.rs  detect.rs  model.rs
crates/agent-seal-launcher/: Cargo.toml
crates/agent-seal-launcher/src/: anti_debug.rs  lib.rs  main.rs  memfd_exec.rs  seccomp.rs  self_delete.rs
crates/agent-seal-launcher/src/cleanup/: linux.rs  macos.rs  mod.rs
crates/agent-seal-launcher/src/protection/: linux.rs  macos.rs  mod.rs
crates/agent-seal-proxy/: Cargo.toml
crates/agent-seal-proxy/src/: auth.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  state.rs  stream.rs
crates/agent-seal-server/: Cargo.toml
crates/agent-seal-server/src/: lib.rs  main.rs  routes.rs  sandbox.rs  state.rs
crates/agent-seal/src/: compile.rs  keygen.rs  launch.rs  main.rs  proxy.rs  server.rs  sign.rs  verify.rs
crates/snapfzz-seal/: Cargo.toml
crates/snapfzz-seal-compiler/: Cargo.toml
crates/snapfzz-seal-compiler/src/: assemble.rs  compile.rs  decoys.rs  embed.rs  lib.rs
crates/snapfzz-seal-compiler/src/backend/: golang.rs  nuitka.rs
crates/snapfzz-seal-core/: Cargo.toml  build.rs
crates/snapfzz-seal-core/src/: integrity.rs  lib.rs  payload.rs  shamir.rs  tamper.rs  types.rs
crates/snapfzz-seal-core/src/whitebox/: aes.rs  tables.rs
crates/snapfzz-seal-core/tests/: markers_test.rs
crates/snapfzz-seal-fingerprint/src/: detect.rs
crates/snapfzz-seal-launcher/: Cargo.toml  build.rs
crates/snapfzz-seal-launcher/src/: anti_analysis.rs  audit.rs  lib.rs  markers.rs  memfd_exec.rs  seccomp.rs  temp_exec.rs
crates/snapfzz-seal-server/: Cargo.toml
crates/snapfzz-seal-server/src/: auth.rs  lib.rs  main.rs  routes.rs  state.rs
crates/snapfzz-seal-server/src/sandbox/: docker.rs
crates/snapfzz-seal/src/: compile.rs  fingerprint.rs  main.rs  verify.rs
docs/: IMPLEMENTATION_REPORT.md
e2e-tests/: Dockerfile  full_interaction_test.sh  quick_test.sh
examples/chat_agent/: main.py
examples/demo_agent/: README.md  main.py
examples/go_agent/: go.mod  main.go
scripts/: build_launcher.sh  demo.sh  e2e-demo.sh  setup-secrets.sh
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: intro.md  roadmap.md
website/docs/advanced/: custom-backends.md  multi-platform.md  server-deployment.md
website/docs/architecture/: capabilities.md  compatibility.md  crates.md  how-it-works.md  payload-format.md  supported-backends.md  supported-sandboxes.md
website/docs/getting-started/: capabilities.md  how-it-works.md  installation.md  quick-start.md  signing-workflow.md
website/docs/reference/: api.md  cli.md  configuration.md  encryption.md  fingerprinting.md
website/docs/security/: audits.md  threat-model.md
website/src/css/: custom.css
