[workspace]
resolver = "3"
members = ["crates/*"]
default-members = [
  "crates/agent-seal-core",
  "crates/agent-seal-fingerprint",
  "crates/agent-seal-launcher",
  "crates/agent-seal-server",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
aes-gcm = "0.11.0-rc.3"
aead = "0.6.0-rc.10"
aead-stream = { version = "0.6.0-rc.3", features = ["alloc"] }
hkdf = "0.12"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "signal"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
governor = "0.7"
zeroize = { version = "1", features = ["derive"] }
memfd = "0.6"
nix = { version = "0.29", features = ["process", "fs", "sched"] }
procfs = "0.17"
hmac = "0.12"
subtle = "2"
hex = "0.4"
bytes = "1"
futures = "0.3"
tempfile = "3"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
