[package]
name = "agent-seal-fingerprint"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
nix = { workspace = true, features = ["hostname", "feature"] }
sha2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
hmac = "0.12"

[dev-dependencies]
serde_json = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = { workspace = true }
