[package]
name = "agent-seal-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-seal-core = { path = "../agent-seal-core" }
agent-seal-fingerprint = { path = "../agent-seal-fingerprint" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
memfd = { workspace = true }
nix = { workspace = true, features = ["process", "fs", "sched", "signal", "ptrace"] }
zeroize = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
