[package]
name = "agent-seal-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-seal-core = { path = "../agent-seal-core" }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
subtle = { workspace = true }
hmac = { workspace = true }
