[package]
name = "agent-seal-server"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-seal-core = { path = "../agent-seal-core" }
agent-seal-compiler = { path = "../agent-seal-compiler" }
agent-seal-fingerprint = { path = "../agent-seal-fingerprint" }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
regex = "1"
