[package]
name = "agent-seal"
version = "0.1.0"
edition = "2024"
description = "Agent Seal — encrypted sandbox-bound agent delivery"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "seal"
path = "src/main.rs"

[dependencies]
agent-seal-core = { path = "../agent-seal-core" }
agent-seal-compiler = { path = "../agent-seal-compiler" }
agent-seal-launcher = { path = "../agent-seal-launcher" }
agent-seal-server = { path = "../agent-seal-server" }
agent-seal-fingerprint = { path = "../agent-seal-fingerprint" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
