[package]
name = "snapfzz-seal-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
snapfzz-seal-core = { path = "../snapfzz-seal-core" }
snapfzz-seal-fingerprint = { path = "../snapfzz-seal-fingerprint" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
