[package]
name = "snapfzz-seal-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
snapfzz-seal-core = { path = "../snapfzz-seal-core" }
snapfzz-seal-fingerprint = { path = "../snapfzz-seal-fingerprint" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
memfd = { workspace = true }
nix = { workspace = true, features = ["process", "fs", "sched", "signal", "ptrace"] }
zeroize = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
